<resources>
    <string name="app_name">ARM</string>
    <string name="title_activity_funcionario">FuncionarioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_listafuncionarios">Lista de Funcionários</string>

    <string name="home_second">Home Second</string>
    <string name="btn_entrar">Entrar</string>
    <string name="logout">Terminar sessão</string>
    <string name="txt_arm"> \n Aplicação para Registo de Medicação</string>
    <string name="lbl_email">E-mail</string>
    <string name="txt_emailinsere">Insira aqui o seu email</string>
    <string name="lbl_password">Password</string>
    <string name="txt_passwordinsere">Insira aqui a sua password</string>
    <string name="menu_inicio">Início</string>
    <string name="menu_dadospessoais">Dados Pessoais</string>
    <string name="menu_listacriancas">Lista de Crianças</string>
    <string name="menu_medregisto">Adicionar Registo de Medicação</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_ajuda">Ajuda</string>
    <string name="lbl_nome">Nome</string>
    <string name="txt_nome_exemplo">Maria João Martins</string>
    <string name="lbl_funcao">Função</string>
    <string name="txt_funcao_exemplo">Educador(a)</string>
    <string name="lbl_sala">Sala</string>
    <string name="txt_sala_exemplo">Laranja</string>
    <string name="txt_email_exemplo">mjmartins@gmail.com</string>
    <string name="btn_alterar">Alterar</string>
    <string name="lbl_telemovel">Telemóvel</string>
    <string name="txt_telemovel_exemplo">916584320</string>
    <string name="txt_telemovelinsere">Insira aqui o seu telemóvel</string>
    <string name="lbl_nome_c">Nome da criança</string>
    <string name="lbl_uc">Unidade Curricular</string>
    <string name="txt_ajuda">Na área “Dados pessoais” pode consultar e editar os seus dados pessoais. \n \n Na área “Lista de crianças” o respectivo educador(a) pode consultar as crianças da sua sala e a respectiva informação de dados pessoaise registo de medicação.\n \n Na área “Medicação” pode efectuar o registo da medicação que será administrada à respectiva criança.</string>
    <string name="txt_home">Bem Vindo!</string>
    <string name="menu_addfun">Novo Registo de Funcionário</string>
    <string name="menu_addcri">Novo Registo de Criança</string>
    <string name="txt_sec_ajuda"> Na área “Lista de funcionários” pode consultar e editar/apagar a lista de todos os funcionários. \n\n Na área “Lista de crianças” pode consultar e editar/apagar a lista de todas as crianças matriculadas na instituição. \n\n Na área “Novo Registo” pode efectuar o registo de um novo funcionário e/ou criança.</string>

</resources>
