<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@mipmap/home"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_listafuncionarios"
            android:icon="@mipmap/lista_funcionarios"
            android:title="@string/menu_listafuncionarios" />
        <item
            android:id="@+id/nav_lista_criancas"
            android:icon="@mipmap/lista_criancas"
            android:title="@string/menu_listacriancas" />
        <item
            android:id="@+id/nav_addfun"
            android:icon="@mipmap/add_funcionario"
            android:title="@string/menu_addfun" />
        <item
            android:id="@+id/nav_addcri"
            android:icon="@mipmap/add_crianca"
            android:title="@string/menu_addcri" />
        <item
            android:id="@+id/nav_sobre"
            android:icon="@mipmap/sobre"
            android:title="@string/menu_sobre" />
        <item
            android:id="@+id/nav_ajuda"
            android:icon="@mipmap/ajuda"
            android:title="@string/menu_ajuda" />
    </group>
</menu>
